Integrate caff parser
- Calling the caff parser from the server (only caffs)